--- a/package.json
+++ b/package.json
@@ -16,7 +16,12 @@
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.5.3"
+    "gulp-responsive": "^2.3.0",
+    "gulp-sass": "^2.3.1",
+    "gulp-uglify": "^1.5.3",
+    "gulp-webserver": "^0.9.1",
+    "opn": "^4.0.1"
   }
 }
