--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "babel-preset-es2015": "^6.6.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
@@ -23,5 +23,12 @@
     "gulp-uglify": "^1.5.3",
     "gulp-webserver": "^0.9.1",
     "opn": "^4.0.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.11.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-register": "^6.11.6",
+    "gulp-babel": "^6.1.2",
+    "gulp-sass": "^2.3.2"
   }
 }
